<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:orientation="vertical">

	<TextView style="@style/BigSquare"
	          android:id="@+id/ExpressionText"/>

	<TextView style="@style/LittleSquare"
	          android:id="@+id/Debug"/>

	<LinearLayout style="@style/AnotherLinear">

		<LinearLayout style="@style/SomeLinear">

			<Button style="@style/Button"
			        android:text="@string/c"
			        android:onClick="ClearAll"/>

			<Button style="@style/Button"
			        android:text="@string/left_par"
			        android:id="@+id/LeftParenthesis"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:id="@+id/RightParenthesis"
			        android:text="@string/right_par"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/last"
			        android:id="@+id/Last"/>

			<Button style="@style/Button"
			        android:text="@string/del"
			        android:id="@+id/ClearLastOperation"
			        android:onClick="ClearLast"/>


		</LinearLayout>

		<LinearLayout style="@style/SomeLinear">

			<Button style="@style/Button"
			        android:text="@string/_7"
			        android:id="@+id/Seven"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/_8"
			        android:id="@+id/Eight"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/_9"
			        android:id="@+id/Nine"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/div"
			        android:id="@+id/Divide"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/mr"
			        android:id="@+id/TakeFromMemory"/>

		</LinearLayout>

		<LinearLayout style="@style/SomeLinear">

			<Button style="@style/Button"
			        android:text="@string/_4"
			        android:id="@+id/Four"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/_5"
			        android:id="@+id/Five"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/_6"
			        android:id="@+id/Six"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/mul"
			        android:id="@+id/Multiply"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/m_plus"
			        android:id="@+id/AddInMemory"/>

		</LinearLayout>

		<LinearLayout style="@style/SomeLinear">

			<Button style="@style/Button"
			        android:text="@string/_1"
			        android:id="@+id/One"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/_2"
			        android:id="@+id/Two"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/_3"
			        android:id="@+id/Three"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/sub"
			        android:id="@+id/Subtract"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/_else"
			        android:id="@+id/Else"/>

		</LinearLayout>

		<LinearLayout style="@style/SomeLinear">

			<Button style="@style/Button"
			        android:text="@string/_0"
			        android:id="@+id/Zero"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/point"
			        android:id="@+id/Point"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/mod"
			        android:id="@+id/Modulo"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/add"
			        android:id="@+id/Add"
			        android:onClick="AddSymbol"/>

			<Button style="@style/Button"
			        android:text="@string/equal"
			        android:id="@+id/Equally"
			        android:onClick="Evaluate"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>